# R2GUESS

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: example.as.ESS.object.R
data/: MAP.file.rda  data.X.rda  data.Y.Hopx.rda
inst/: CITATION
inst/Input/: data-X-C-CODE.txt  data-Y-ALL-C-CODE.txt
inst/Output/: Example-GUESS-Y-Hopx-command-C.txt  Example-GUESS-Y-Hopx_features.txt  Example-GUESS-Y-Hopx_log  Example-GUESS-Y-Hopx_output_all_exchange_history.txt  Example-GUESS-Y-Hopx_output_best_visited_models.RData  Example-GUESS-Y-Hopx_output_best_visited_models.txt  Example-GUESS-Y-Hopx_output_cross_over_history.txt  Example-GUESS-Y-Hopx_output_delayed_rejection_history.txt  Example-GUESS-Y-Hopx_output_fast_scan_history.txt  Example-GUESS-Y-Hopx_output_g_adaptation_history.txt  Example-GUESS-Y-Hopx_output_g_history.txt  Example-GUESS-Y-Hopx_output_gibbs_history.txt  Example-GUESS-Y-Hopx_output_log_cond_post_prob_history.txt  (+9 more)
man/: Analysis.permutation.Rd  Extend.R2GUESS.Rd  FDR.permutation.Rd  MAP.file.Rd  Postprocess.R2GUESS.Rd  R2GUESS-package.Rd  R2GUESS.Rd  R2GUESS.perm.Rd  Resume.R2GUESS.Rd  as.ESS.object.Rd  boxplotbeta.Rd  check.convergence.Rd  data.X.Rd  data.Y.Hopx.Rd  example.as.ESS.object.Rd  get.best.models.Rd  get.g.sweep.Rd  get.sweep.best.model.Rd  pairwise.correlation.Rd  plot.ESS.Rd  plotMPPI.Rd  plotcim.Rd  plotcim.explore.Rd  plotmodel.Rd  plotvariable.Rd  print.ESS.Rd  sample.beta.Rd  summary.ESS.Rd  summarybest.model.Rd  wrapper.Rd
src/: Makevars.in  Makevars.win
tools/: cula.m4
(+42 files in other folders)
